adding more CSS to adopt-a-dog website. Assignment 03 complete.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,30 @@
-header {
+* {
+  margin: 1px;
+}
+
+.header-banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: row nowrap;
   background-color: #003d64;
   height: 10rem;
+  padding: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.main-nav {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 0 70% 1rem 0;
+  padding: 1rem;
+}
+
+.main-nav-container {
+  background-color: #ececec;
 }
 
 footer {
@@ -37,14 +61,6 @@ h2 {
   width: 2rem;
 }
 
-.header-banner {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  width: 100%;
-  padding: 1rem;
-}
-
 .intro-photo {
   width: 15rem;
   margin: 1rem 1rem 1rem 1rem;
@@ -58,18 +74,28 @@ h2 {
 .dog-list-container {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 1rem;
 }
 
 .dog-box {
   flex: 1 1 auto;
-  width: 10rem;
+  width: 10.5rem;
   text-wrap: balance;
   justify-content: center;
   text-align: center;
+  border-style: solid;
+  border-radius: .2rem;
+  margin: .5rem;
+  padding-bottom: 1rem;
+  padding-left: 0;
+  max-width: 10.5rem;
+  box-sizing: content-box;
 }
 
 .dog-profile-photo {
-  width: 10rem;
+  width: 10.5rem;
+  box-sizing: border-box;
 }
 
 .blog-container {
